fix subnav child alignment

--- a/src/components/NavBar/PlatformSubNav/styles.css
+++ b/src/components/NavBar/PlatformSubNav/styles.css
@@ -1,10 +1,14 @@
 .icon--large {
   height: 15vh;
   overflow-y: visible;
+  align-self: end;
+  margin-right: 10px;
 }
 
 .icon--small {
   height: 42px;
+  align-self: center;
+  margin-right: 0.5vw;
 }
 
 .banner {
